# cloudflare-ddns

./: .gitignore  Cargo.toml  Changes.md  Dockerfile  Makefile  docker-compose.yml  readme.md
.github/workflows/: build.yml  x86-64.yml
src/: main.rs  scheduler.rs
