[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dns-lookup = "2.0.4"
log = "0.4.21"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "rustls-tls"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
